KPV-2446 :: back button -> Recover bio spliting it in 2 fields. Also fixed searcher. Now, due to html code on bie, the emphasis text breaks the layout

--- a/web-app/css/custom.css
+++ b/web-app/css/custom.css
@@ -4371,17 +4371,42 @@ h2.underline {border-bottom: 1px solid #dadada; padding: 0 0 10px 0; margin-top:
     color: #999;
     font-size: 3em;
     text-align: center;
-    padding-top:10%;
+    padding-top: 10%;
 }
 
-.card-header-photo .watermarked::before {padding-top:5%;font-size: 2em;}
+.card-header-photo .watermarked::before {
+    padding-top: 5%;
+    font-size: 2em;
+}
 
-.search-list .search-kuorum-user .box-ppal .user {margin: -60px 15px 0px 15px;}
-.search-list .search-kuorum-user .box-ppal em {background-color: #fefea5;}
-.profile-pic-div{
+.search-list .search-kuorum-user .box-ppal .user {
+    margin: -60px 15px 0px 15px;
+}
+
+.search-list .search-kuorum-user .box-ppal .search-user-bio {
+    padding: 10px;
+    height: 115px;
+    overflow: hidden;
+}
+
+.search-list .search-kuorum-user .box-ppal .search-user-bio p {
+    margin: 0 0 10px 0;
+    line-height: 15px;
+}
+
+.search-list .search-kuorum-user .box-ppal .search-user-bio h5 {
+    font-size: calc(100% + 2px);
+}
+
+.search-list .search-kuorum-user .box-ppal em {
+    background-color: #fefea5;
+}
+
+.profile-pic-div {
     position: relative;
     display: inline-block;
 }
+
 .search-list .search-kuorum-user .box-ppal .user .user-img {
     border: 4px solid #fff;
     width: 96px;
@@ -6544,7 +6569,6 @@ p.email > span.follower + .tooltip.bottom .tooltip-arrow{
     .config.search > article > .clearfix > h1 {width: 70%; float: left; cursor: pointer}
     .config.search > article > .clearfix > #results {width: 30%; float: right; line-height: 30px; margin: 20px 0 0 0; text-align: right;}
 
-    .search-list .search-kuorum-user .box-ppal p {height: 70px; margin: 0 0 7px; overflow: hidden;}
     .search-list .search-kuorum-user .box-ppal p.party{font-size: 12px; height: auto; margin: 0;}
     .search-list .search-kuorum-user .box-ppal > small {float: none; position: absolute; bottom: 0; left: 0;}
     .search-list .search-kuorum-user .box-ppal > .pull-right {float: none; position: absolute; bottom: 0; right: 0;}
